--- a/.github/workflows/on-safe-to-test-label.yml
+++ b/.github/workflows/on-safe-to-test-label.yml
@@ -54,7 +54,6 @@ jobs:
             ]
           pre-runner-script: |
             sudo yum install docker git jq libicu -y
-            sudo yum groupinstall "Development Tools" -y
             sudo service docker start
 
   do-the-job:
@@ -63,6 +62,9 @@ jobs:
     needs: start-runner # required to start the main job when the runner is ready
     runs-on: ${{ needs.start-runner.outputs.label }} # run the job on the newly created runner
     steps:
+      - name: Install Development Tools
+        run: |
+          sudo yum groupinstall "Development Tools" -y
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
         with:
