--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -25,7 +25,8 @@
       "matchPackageNames": [
         "k8s.io/client-go",
         "k8s.io/api",
-        "k8s.io/apimachinery"
+        "k8s.io/apimachinery",
+        "kubernetes-sigs/controller-tools"
       ],
       "matchUpdateTypes": [
         "major" 
